[package]
name = "cedar"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cedar"
path = "src/lib.rs"

[[bin]]
name = "cedarc"
path = "src/main.rs"

[dependencies]
rustyline = "6.1"

[dev-dependencies]
pretty_assertions = "0.6"
